<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="#0A9067"
    >

    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:id="@+id/appicon"
        android:elevation="5dp"
        >

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_below="@+id/appicon"
        android:id="@+id/appname"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        >

    </TextView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/appname"
        android:id="@+id/RL1"
        android:layout_marginTop="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_mobile"
            android:id="@+id/mobilenumbertv"
            >

        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mobilenumberet"
            android:layout_below="@+id/mobilenumbertv"
            android:inputType="phone"
            android:maxLength="10"
            android:width="250sp"
            >

        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendotpbtn"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/mobilenumberet"
            android:text="@string/get_otp"
            android:background="#3C5286"
            >

        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp"
            android:id="@+id/otptv"
            android:layout_below="@+id/sendotpbtn"
            android:layout_marginTop="20sp"
            >

        </TextView>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/otpet"
            android:inputType="phone"
            android:layout_below="@id/otptv"
            android:width="250dp"
            android:maxLength="6"
            >

        </EditText>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept_term"
            android:id="@+id/tccheckbox"
            android:layout_below="@+id/otpet"
            android:layout_marginTop="20sp"
            >

        </CheckBox>

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"
        android:layout_below="@id/RL1"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:background="#3C5286"
        >

    </Button>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#054B36"
        android:layout_marginTop="10dp"
        android:layout_below="@id/loginbtn">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_centerHorizontal="true"></TextView>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_1"
            android:layout_centerVertical="true"
            android:id="@+id/English"
            android:layout_marginLeft="70dp"></Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_2"
            android:id="@+id/Hindi"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="70dp"></Button>
    </RelativeLayout>

</RelativeLayout>